# ai_reasearch_model

./: .gitignore  LICENSE  patch_coordinates.json  pyproject.toml  test.py  test10.py  test11.py  test12.py  test13.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
configs/: base.yaml
scripts/: train.py
src/config/: schema.py
src/data/: datamodule.py  dataset.py
src/models/: base.py  resnet.py
src/training/: checkpoint.py  loops.py  metrics.py  trainer.py
src/utils/: logging.py  profiling.py  reproducibility.py
